2003-03-03  Tom Yu  <tlyu@mit.edu>

	* configure.in: Delete unused ADD_DEF, probably left over from
	appl/bsd.

2003-01-10  Ken Raeburn  <raeburn@mit.edu>

	* configure.in: Don't explicitly invoke AC_PROG_INSTALL,
	AC_PROG_ARCHIVE, AC_PROG_RANLIB.

	* Makefile.in: Add AC_SUBST_FILE marker for lib_frag and libobj_frag.

2002-12-06  Ezra Peisach  <epeisach@bu.edu>

	* configure.in: Quote the argument to AC_CHECK_HEADER. Autoconf
	2.57 was having problems.

2002-08-29  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Revert $(S)=>/ change, for Windows support.

	* pty_err.et: Add final "end" statement.

2002-08-23  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Change $(S)=>/ and $(U)=>.. globally.

2002-07-12  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in (install): Don't install libpty.h.
	* configure.in: Always build static library only.

2002-06-12  Ken Raeburn  <raeburn@mit.edu>

	* cleanup.c, getpty.c, init.c, init_slave.c, logwtmp.c,
	open_ctty.c, open_slave.c, pty_paranoia.c, sane_hostname.c,
	update_utmp.c, update_wtmp.c, vhangup.c, void_assoc.c: Include
	"com_err.h" instead of <com_err.h>.

	* pty-int.h: Don't include syslog.h.

2002-05-24  Ken Raeburn  <raeburn@mit.edu>

	* sane_hostname.c (pty_make_sane_hostname): Always initialize
	"ai".

2002-03-26  Ken Raeburn  <raeburn@mit.edu>

	* sane_hostname.c: Include fake-addrinfo.h, not fake-addrinfo.c.
	(FAI_PREFIX): Delete.

2002-02-19  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in (LIBMINOR): Bump due to change in internals.  (Tom's
	change from 1.2.x branch.)

2001-12-03  Sam Hartman  <hartmans@mit.edu>

	* README: s-pty_init_ets/pty_init/

2001-11-28  Tom Yu  <tlyu@mit.edu>

	* update_utmp.c (PTY_GETUTXENT): Fix typo.  Thanks to Shawn
	Stepper. [fixes krb5-build/1020]

2001-11-19  Tom Yu  <tlyu@mit.edu>

	* update_utmp.c (pty_update_utmp): Patch from Garry Zacheiss to
	kludge around cases where we need to use more than 2 characters of
	LINE in order to avoid conflicts in UT_ID.
